--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ Pruebas de jupyter/.ipynb_checkpoints/Prueba 1-checkpoint.ipynb
 Pruebas de jupyter/Prueba 1.ipynb
 Libros y articulos usados/explicación ecuación de onda.pdf
 Libros y articulos usados/Dialnet-SolucionNumericaDeLaEcuacionDeOndaEnMediosHeteroge-7306115.pdf
+Libros y articulos usados/explicación ecuación de onda.pdf
