--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ Pruebas de jupyter/Prueba 1.ipynb
 Libros y articulos usados/explicación ecuación de onda.pdf
 Libros y articulos usados/Dialnet-SolucionNumericaDeLaEcuacionDeOndaEnMediosHeteroge-7306115.pdf
 Libros y articulos usados/explicación ecuación de onda.pdf
+Libros y articulos usados/Libros y para que.docx
