--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,53 @@ Libros y articulos usados/explicación ecuación de onda.pdf
 Libros y articulos usados/Dialnet-SolucionNumericaDeLaEcuacionDeOndaEnMediosHeteroge-7306115.pdf
 Libros y articulos usados/explicación ecuación de onda.pdf
 Libros y articulos usados/Libros y para que.docx
+Libros y articulos usados/Banach space real analysis.png
+Libros y articulos usados/citas/export-bibtex-1686823737.bib
+Libros y articulos usados/citas/Partial_Differential_Equations.bibtex
+Libros y articulos usados/Dialnet-SolucionNumericaDeLaEcuacionDeOndaEnMediosHeteroge-7306115.pdf
+Libros y articulos usados/explicación ecuación de onda.pdf
+Libros y articulos usados/Leer/(Oxford Applied Mathematics and Computing Science Series) G. D. Smith - Numerical Solution of Partial Differential Equations_ Finite Difference Methods-Oxford Univers.pdf
+Libros y articulos usados/Leer/1-s2.0-S0022460X17303012-main.pdf
+Libros y articulos usados/Leer/Allen Taflove, Susan C. Hagness - Computational Electrodynamics_ The Finite-Difference Time-Domain Method, Third Edition-ARTECH HOUSE, INC. (2005).pdf
+Libros y articulos usados/Leer/dkprigge_1.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii.zip
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Appendix-Method-of-Internal-Boundary-_1987_Studies-in-Mathematics-and-Its-Ap.pdf
+Libros y articulos usados/Dialnet-SolucionNumericaDeLaEcuacionDeOndaEnMediosHeteroge-7306115.pdf
+Libros y articulos usados/explicación ecuación de onda.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Bibliographical-Commentaries_1987_Studies-in-Mathematics-and-Its-Application.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Bibliography_1987_Studies-in-Mathematics-and-Its-Applications.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Chapter-1-Difference-Equations-of-first-_1987_Studies-in-Mathematics-and-Its.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Chapter-10-The-Concept-of-Difference-Sche_1987_Studies-in-Mathematics-and-It.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Chapter-11-Elliptic-Problems_1987_Studies-in-Mathematics-and-Its-Application.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Chapter-12-Concept-of-Variational-Difference-a_1987_Studies-in-Mathematics-a.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Chapter-13-Construction-of-the-Transit_1987_Studies-in-Mathematics-and-Its-A.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Chapter-14-Spectral-Criterion-for-the-Stability-of_1987_Studies-in-Mathemati.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Chapter-2-Boundary-Value-Problems-for-Equa_1987_Studies-in-Mathematics-and-I.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Chapter-3-Some-Basic-Methods-for-the-Study-of-Stability-_1987_Studies-in-Mat.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Chapter-4-Elementary-Examples-of-Diffe_1987_Studies-in-Mathematics-and-Its-A.pdf
+Libros y articulos usados/Dialnet-SolucionNumericaDeLaEcuacionDeOndaEnMediosHeteroge-7306115.pdf
+Libros y articulos usados/explicación ecuación de onda.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Chapter-5-Convergence-of-the-Solutions-of-Differenc_1987_Studies-in-Mathemat.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Chapter-6-widely-Used-Difference-S_1987_Studies-in-Mathematics-and-Its-Appli.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Chapter-7-Simplest-Examples-of-the-Constructio_1987_Studies-in-Mathematics-a.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Chapter-8-Some-Basic-Methods-for-the-Stu_1987_Studies-in-Mathematics-and-Its.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Chapter-9-Difference-Scheme-Concepts-in-the-Co_1987_Studies-in-Mathematics-a.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Copyright-page_1987_Studies-in-Mathematics-and-Its-Applications.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Edited-by_1987_Studies-in-Mathematics-and-Its-Applications.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Index_1987_Studies-in-Mathematics-and-Its-Applications.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Introduction_1987_Studies-in-Mathematics-and-Its-Applications.pdf
+Libros y articulos usados/Leer/Godunov y Ryabenkii/Preface_1987_Studies-in-Mathematics-and-Its-Applications.pdf
+Libros y articulos usados/Leer/Halsey Royden, Patrick Fitzpatrick - Real Analysis (4th Edition)-Prentice Hall (2010).pdf
+Libros y articulos usados/Dialnet-SolucionNumericaDeLaEcuacionDeOndaEnMediosHeteroge-7306115.pdf
+Libros y articulos usados/explicación ecuación de onda.pdf
+Libros y articulos usados/Leer/Heinz-Otto Kreiss, Jens Lorenz - Initial-boundary value problems and the Navier-Stokes equations-Academic Press (2004).djvu
+Libros y articulos usados/Leer/Jos Thijssen - Computational Physics-Cambridge University Press (2012).pdf
+Libros y articulos usados/Leer/Randall J. LeVeque - Finite Volume Methods for Hyperbolic Problems-Cambridge University Press (2002).pdf
+Libros y articulos usados/Leer/Robert C. McOwen - Partial Differential Equations_ Methods and Applications (2nd Edition). By Robert C. McOwen. 2003 Edition-Prentice-Hall (2003).pdf
+Libros y articulos usados/Li-Libin2009_Book_GlobalPropagationOfRegularNonl.pdf
+Libros y articulos usados/Libros y para que.docx
+Libros y articulos usados/NoeliaOrtegaRoman-TFG.pdf
+Libros y articulos usados/PDE, WALTER A. STRAUSS.pdf
+Libros y articulos usados/ScienceDirect_articles_27Jul2022_09-30-50.182.zip
+Libros y articulos usados/Tema 1 Ecuac_Diferencias 2018-2019.pdf
+Libros y articulos usados/TFG-GloriaAlmozaraSainz.pdf
