--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,15 @@ Libros y articulos usados/PDE, WALTER A. STRAUSS.pdf
 Libros y articulos usados/ScienceDirect_articles_27Jul2022_09-30-50.182.zip
 Libros y articulos usados/Tema 1 Ecuac_Diferencias 2018-2019.pdf
 Libros y articulos usados/TFG-GloriaAlmozaraSainz.pdf
+Libros y articulos usados/Dialnet-SolucionNumericaDeLaEcuacionDeOndaEnMediosHeteroge-7306115.pdf
+Libros y articulos usados/Dialnet-SolucionNumericaDeLaEcuacionDeOndaEnMediosHeteroge-7306115.pdf
+Libros y articulos usados/explicación ecuación de onda.pdf
+Libros y articulos usados/Dialnet-SolucionNumericaDeLaEcuacionDeOndaEnMediosHeteroge-7306115.pdf
+Pruebas de jupyter/.ipynb_checkpoints/Prueba 1-checkpoint.ipynb
+Libros y articulos usados/TFG-GloriaAlmozaraSainz.pdf
+Libros y articulos usados/Tema 1 Ecuac_Diferencias 2018-2019.pdf
+Libros y articulos usados/NoeliaOrtegaRoman-TFG.pdf
+Libros y articulos usados/ScienceDirect_articles_27Jul2022_09-30-50.182.zip
+Libros y articulos usados/Libros y para que.docx
+Libros y articulos usados/Li-Libin2009_Book_GlobalPropagationOfRegularNonl.pdf
+Libros y articulos usados/explicación ecuación de onda.pdf
